--- a/config.yaml
+++ b/config.yaml
@@ -15,14 +15,58 @@ params:
   title: "utf9k"
 
 menu:
-  frequent:
+  a:
     - identifier: "blog"
       name: "Blog"
       url: "/blog"
-  whoami:
+      weight: 1
+    - identifier: "projects"
+      name: "Projects"
+      url: "/projects"
+      weight: 2
+    - identifier: "questions"
+      name: "Questions"
+      url: "/questions"
+      weight: 3
+  b:
     - identifier: "about"
       name: "About"
       url: "/about"
+      weight: 1
+    - identifier: "now"
+      name: "Now"
+      url: "/now"
+      weight: 2
+    - identifier: "uses"
+      name: "Uses"
+      url: "/uses"
+      weight: 3
+  c:
+    - identifier: "books"
+      name: "Books"
+      url: "/books"
+      weight: 1
+    - identifier: "games"
+      name: "Games"
+      url: "/games"
+      weight: 2
+  d:
+    - identifier: "thanks"
+      name: "Thanks"
+      url: "/thanks"
+      weight: 1
+    - identifier: "experiments"
+      name: "Experiments"
+      url: "/experiments"
+      weight: 2
+    - identifier: "reviews"
+      name: "Reviews"
+      url: "/reviews"
+      weight: 3
+    - identifier: "debug"
+      name: "Debug"
+      url: "/debug"
+      weight: 4
 
 headers:
   - for: /**.html
