Build fancy links in production

--- a/render.yaml
+++ b/render.yaml
@@ -2,7 +2,7 @@ services:
   - type: web
     name: utf9k
     env: static
-    buildCommand: yarn build
+    buildCommand: yarn build:prod
     staticPublishPath: ./public
     pullRequestPreviewsEnabled: true
     headers:
