--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "overmind s",
     "build": "yarn run gather-files && yarn run build:css && NODE_ENV=production hugo --gc",
     "build:css": "NODE_ENV=production ./node_modules/tailwindcss/lib/cli.js -i ./assets/css/tailwind.css -o ./assets/css/style.css --jit --minify",
+    "build:prod": "yarn run generate-fancy-links && yarn run build",
     "lint": "eslint assets/js",
     "gather-files": "python scripts/gather-filesizes.py",
     "generate-fancy-links": "pip install -U pip && pip install -r scripts/requirements.txt && python scripts/generate-fancylinks.py"
