Added a new gag line

--- a/data/gags.yml
+++ b/data/gags.yml
@@ -23,3 +23,4 @@ lines:
 - An internet connected sandwich maker wouldn't be so bad, would it?
 - Someone who is good at the economy please help me plan my startup runway
 - :wq!
+- Apparently you're supposed to feel rested after sleep but I haven't read the literature myself
